@@ -40,6 +40,7 @@
 * Transfirst: Fix missing address and remove CC only fields for ACH [davidsantoso]
 * Stripe: Support ACH payments [sdball]
 * NCRSecurePay: Fix production URL [rwdaigle]
+* Clearhaus: Make request signing more transparent & robust [sdball]
 
 
 == Version 1.56.0 (December 1, 2015)
